Fixed alignment of personal-links

--- a/css/index.css
+++ b/css/index.css
@@ -475,7 +475,7 @@ nav {
 .personal-links {
   height: 30vh;
   position: fixed;
-  left: 2em;
+  left: 3em;
   bottom: 2rem; }
   .personal-links div {
     height: 100%; }
